// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Menu - snapshots Menu advanced mode, online 1`] = `
<View
  style={
    {
      "alignItems": "stretch",
      "backgroundColor": "#040C17",
      "flex": 1,
    }
  }
>
  <Text
    style={
      {
        "color": "#ffffff",
        "fontSize": 18,
        "fontWeight": "600",
        "marginLeft": 30,
        "marginVertical": 10,
        "opacity": 1,
      }
    }
  >
    text translated
  </Text>
  <View
    style={
      {
        "backgroundColor": "#18bd18",
        "height": 1,
      }
    }
  />
  <View
    style={
      {
        "display": "flex",
        "marginLeft": 20,
      }
    }
  >
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.about"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.info"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.addressbook"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.walletseedufvk"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.rescan"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.syncreport"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.fundpools"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.insight"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.changewallet"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.votefornym"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
    >
      text translated
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "#040C17",
        "bottom": 5,
        "flexDirection": "row",
        "padding": 10,
        "position": "absolute",
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 8,
        }
      }
    >
      Version : 
    </Text>
    <Text
      style={
        {
          "color": "#5a8c5a",
          "fontSize": 8,
        }
      }
    >
      text translated
    </Text>
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 8,
          "marginLeft": 10,
        }
      }
    >
      text translatedtext translated
    </Text>
  </View>
</View>
`;

exports[`Menu - snapshots Menu basic mode, no value transfers 1`] = `
<View
  style={
    {
      "alignItems": "stretch",
      "backgroundColor": "#040C17",
      "flex": 1,
    }
  }
>
  <Text
    style={
      {
        "color": "#ffffff",
        "fontSize": 18,
        "fontWeight": "600",
        "marginLeft": 30,
        "marginVertical": 10,
        "opacity": 1,
      }
    }
  >
    text translated
  </Text>
  <View
    style={
      {
        "backgroundColor": "#18bd18",
        "height": 1,
      }
    }
  />
  <View
    style={
      {
        "display": "flex",
        "marginLeft": 20,
      }
    }
  >
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.about"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.addressbook"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.loadwalletfromseed"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.tipzingolabs"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "600",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
    >
      text translated
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "#040C17",
        "bottom": 5,
        "flexDirection": "row",
        "padding": 10,
        "position": "absolute",
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 8,
        }
      }
    >
      Version : 
    </Text>
    <Text
      style={
        {
          "color": "#5a8c5a",
          "fontSize": 8,
        }
      }
    >
      text translated
    </Text>
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 8,
          "marginLeft": 10,
        }
      }
    >
      text translatedtext translated
    </Text>
  </View>
</View>
`;
